# baseball-spider

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/baseball_spider/: bio.py  elements.py  id.py  selenium_manager.py  stats.py
src/baseball_spider/classes/: player.py
src/baseball_spider/data_spider/: at_bats.py  bio.py  season.py  selenium_manager.py
src/baseball_spider/spider/: at_bats.py  bio.py  logger.py  player_ids.py  season.py  selenium_manager.py
tests/: conftest.py  test_at_bats.py
tests/test_data/: mlb_player_ids_2021-9.csv  player_bios.csv
tests/test_data/at_bats/: aaron-bummer-607481_2020.csv  trea-turner-607208_2021.csv
tests/test_data/at_bats/P/: walker-buehler-621111_2021.csv
