[metadata]
name = baseball-spider
version=0.1.0
description = Webscraper for baseball stats.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bjhammack/baseball-spider
author = Benjamin Hammack
auther_email = bjhammack@protonmail.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Webscraping :: Data Science :: Statistics :: Baseball
project_urls=
    Changelog = https://github.com/bjhammack/baseball-spider/blob/master/CHANGELOG.md
    Bug Tracker = https://github.com/bjhammack/baseball-spider/issues
keywords = 
    baseball
    webscraping
    selenium
    dataclasses
    data science
    stats

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.8
zip_safe = false
install_requires =
    certifi>=2021.5.30
    charset-normalizer>=2.0.6
    colorama>=0.4.4
    configparser>=5.0.2
    crayons>=0.4.0
    idna>=3.2
    numpy>=1.21.2
    pandas>=1.3.3
    python-dateutil>=2.8.2
    pytz>=2021.1
    requests>=2.26.0
    selenium>=3.141.0
    six>=1.16.0
    urllib3>=1.26.7
    webdriver-manager>=3.4.2

[options.extras_require]
testing =
    flake8==3.9.2
    tox==3.24.3
    pytest==6.2.5
    pytest-cov==2.12.1
    mypy==0.910

[options.package_data]
baseball_spider = py.typed

[options.packages.find]
include = baseball_spider, baseball_spider.*

[flake8]
max-line-length = 88
exclude = .git, .eggs, __pycache__, tests/, docs/, build/, dist/, data/, logs/
